kubernetes/apps/default/gdb/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.35.0-standalone-strict/networkpolicy-networking-v1.json
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: gdb-internal-only
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: gdb
      app.kubernetes.io/instance: gdb
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: network
      ports:
        - protocol: TCP
          port: 8000
